@startuml
title UC03 - Definir Categoria de Tarefa

class Plataforma <<Singleton>> {
    -String designacao
}

class RegistarCategoriaTarefaUI{
    --
    allAreasAtividade()
    registarAreaAtividade(descricao, codAreaAtividade)
    allGrausProficiencia(codCompetencia)
    setProficienciaObrigatoriedade(codGrau, obrigatoria)
    registaCategoria()
}

class RegistarCategoriaTarefaCTRL{
   --
   allCategorias()
   registarCategoria(descricao, at)
   findGPBtCodigo(ct)
   grauProficiencia(codGrau)
   registarCaracterizacao(ct, gp, obrigatoria)
   save(c)
}

class AreaAtividade{
    String codigoAreaActividade
    String descBreve
    String descDetalhada
}

class CompetenciaTecnica{
    String codigoCompetenciaTecnica
    String descBreve
    String descDetalhada
}

class Categoria{
    String id 
    String descBreve
    String descDetalhada
}

class GrauProficiencia{
    Integer valor
    String designacao
}

class CaraterCT{
    Boolean obrigatoria
    String grauProfMinimo
    String codigoCompetenciaTecnica
}

class RepositorioAreaAtividade <<Singleton>>{
    -List<AreaAtividade> areasActividade
    -AreaAtividade areaAtividade
    --
    -getAll()
    -AreaAtividade(codAreaAtividade)
}

class RepositorioCompetenciaTecnica <<Singleton>>{
    -List<CompetenciaTecnica> compTecnicas
    -CompetenciaTecnica competenciaTecnica
    --
    -getAll()
    -CompetenciaTecnica(codCompetencia)
}

class RepositorioCategoria <<Singleton>>{
    -List<Categoria> categorias
    -Categoria categoria
    --
    -getAll()
    -findByCodigo(codCat)    
}

RegistarCategoriaTarefaUI ..> RegistarCategoriaTarefaCTRL
RegistarCategoriaTarefaCTRL ..> Plataforma
RegistarCategoriaTarefaCTRL ..> RepositorioAreaAtividade
RegistarCategoriaTarefaCTRL ..> RepositorioCategoria
RegistarCategoriaTarefaCTRL ..> RepositorioCompetenciaTecnica
RepositorioAreaAtividade "1" --> "1..*" AreaAtividade: possui >
RepositorioCategoria "1" --> "1..*"  Categoria: possui >
RepositorioCompetenciaTecnica "1" --> "1..*" CompetenciaTecnica: possui >
CompetenciaTecnica --> GrauProficiencia
GrauProficiencia --> CaraterCT: exige

@enduml